src/test/success/array_assignment_op.egern
var a = [1, 2, 3, 4, 5]

a[0] += 1
a[1] -= 2
a[2] *= 3
a[3] /= 4
a[4] %= 3
print(a[0])
print(a[1])
print(a[2])
print(a[3])
print(a[4])
