src/test/fail/array_indexing_fail.egern
var a = [[1, 2, 3], [3, 4]]
print(a[0][1][2])
print(a[true])
print(a[-1])
print(a[0][5])
